// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-hasTransform-euiTestCss"
  data-popover-panel="true"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPopoverPanel props isAttached is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-isOpen-hasTransform"
  data-popover-open="true"
  data-popover-panel="true"
/>
`;

exports[`EuiPopoverPanel props isOpen is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-isOpen-hasTransform"
  data-popover-open="true"
  data-popover-panel="true"
/>
`;

exports[`EuiPopoverPanel props position bottom is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-hasTransform"
  data-popover-panel="true"
/>
`;

exports[`EuiPopoverPanel props position left is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-hasTransform"
  data-popover-panel="true"
/>
`;

exports[`EuiPopoverPanel props position right is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-hasTransform"
  data-popover-panel="true"
/>
`;

exports[`EuiPopoverPanel props position top is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-hasShadow-euiPopover__panel-light-hasTransform"
  data-popover-panel="true"
/>
`;
